src/test/ui/derives/derives-span-PartialEq-struct.rs
// This file was auto-generated using 'src/etc/generate-deriving-span-tests.py'


struct Error;

#[derive(PartialEq)]
struct Struct {
    x: Error //~ ERROR
//~^ ERROR
}

fn main() {}
